--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     providedCompile group: 'javax', name: 'javaee-api', version:'8.0.1'
     compile group: 'com.airhacks', name: 'jaxrs-cors', version:'0.0.1'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.28'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
 
 }
